<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.set_auth_certificate.SetAuthCertificateFragment">

    <data>
        <import type="android.view.View"/>
        <variable name="viewModel"
            type="com.ishihata_tech.myna_card_demo.ui.set_auth_certificate.SetAuthCertificateViewModel"/>
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/set_auth_cert_explanation"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Widget.MaterialComponents.Button"
            android:text="@string/connect"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/result"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/result_box"
            android:padding="4dp">
            <TextView
                android:id="@+id/text_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </ScrollView>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>